fix gap socials to 24px

--- a/css/styles.css
+++ b/css/styles.css
@@ -503,7 +503,7 @@ header .studio-in-logo {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+  gap: 24px;
 }
 
 .socials-item {
